--- a/package.json
+++ b/package.json
@@ -1,8 +1,12 @@
 {
-  "name": "feishu-agent",
+  "name": "@teamclaw/feishu-agent",
   "module": "index.ts",
   "type": "module",
-  "private": true,
+  "private": false,
+  "scripts": {
+    "test": "bun test",
+    "start:mcp": "bun run src/mcp/server.ts"
+  },
   "devDependencies": {
     "@types/bun": "latest"
   },
@@ -11,6 +15,7 @@
   },
   "dependencies": {
     "@modelcontextprotocol/sdk": "^1.27.1",
+    "commander": "^14.0.3",
     "zod": "^4.3.6"
   }
 }
