--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "scripts": {
     "test": "bun test",
     "start": "bun run src/cli/index.ts",
-    "build": "bun build ./src/cli/index.ts --target=bun --compile --outfile=dist/cli.js",
+    "build": "bun build ./src/cli/index.ts --target=bun --outfile=dist/cli.js",
     "prepublishOnly": "bun run build"
   },
   "devDependencies": {
